--- a/login.html
+++ b/login.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>QuantaSocio - Login</title>
-
+        <link rel="icon" type="image/x-icon" href="logo1.png"/>
     </head>
     <body>
         <div class="NavBar">
