Create img file

--- a/login.html
+++ b/login.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>QuantaSocio - Login</title>
-        <link rel="icon" type="image/x-icon" href="logo1.png"/>
+        <link rel="icon" type="image/x-icon" href="img/logo1.png"/>
     </head>
     <body>
         <div class="NavBar">
-            <img src="logo1.png">
-            <img src="logo2.png" >
+            <img src="img/logo1.png">
+            <img src="img/logo2.png" >
         </div>
         
         <div>
